# Twitter-Sentiment-Analysis

./: .gitignore  README.md  package-cli.sh  report.txt  requirements.txt
landing_page/: index.html  package-lock.json  package.json
landing_page/src/: App.jsx
landing_page/src/components/: Features.jsx  Footer.jsx  Header.jsx  Hero.jsx  Report.jsx  Usage.jsx
model_training/: main.ipynb
trained_models/: bert_logistic_reg_model.joblib  logistic_reg_model.joblib  tfidf_vectorizer.joblib
tweet_classifier_cli/: README.md  pyproject.toml  requirements.txt
tweet_classifier_cli/src/tweet_classifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tweet_classifier_cli/src/tweet_classifier_cli/: __main__.py  predictor.py
