[project]
name = "tweet-classifier"
version = "0.1.0"
description = "A CLI tool to classify tweets using pre-trained models."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "click",
    "scikit-learn",
    "pandas",
    "joblib",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
classify-tweet = "tweet_classifier_cli.__main__:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
